2010-01-18  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/42781
	* tree-ssa-structalias.c (find_what_var_points_to): Skip
	restrict processing only if the original variable was
	artificial.

	* gfortran.fortran-torture/compile/pr42781.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156006 138bc75d-0d04-0410-961f-82ee72b054a4